<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wit.personalrecipe.activities.RecipeActivity">


    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="188dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/recipeTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/recipeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/recipeTitle"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recipeTitle"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/recipeSubtitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />



    <EditText
        android:id="@+id/recipeName"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:hint="@string/hint_recipeName"
        android:inputType="text"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="161dp" />

    <EditText
        android:id="@+id/recipeIngredients"
        android:layout_width="262dp"
        android:layout_height="44dp"
        android:hint="@string/hint_recipeIngredients"
        android:inputType="text"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="232dp" />


    <Button
        android:id="@+id/chooseImage"
        android:layout_width="357dp"
        android:layout_height="63dp"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/button_addImage"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="484dp" />

    <EditText
        android:id="@+id/recipeExplain"
        android:layout_width="397dp"
        android:layout_height="126dp"
        android:hint="@string/hint_recipeExplain"
        android:inputType="text"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="322dp" />

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="397dp"
        android:layout_height="198dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="484dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/button_addRecipe"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="587dp" />


</LinearLayout>